调整项目目录结构。

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
 *.*
 
-!css/
-!error/
-!html/
-!icon/
-!image/
-!launch/
-!res/
-!script
-!wgt
-
-!config.xml
-!index.html
+!widget
 !README.md
 
 !.gitignore
